<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".CanvasActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />

        <Button
            android:id="@+id/solve_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/solve"/>
        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/back"/>
    </LinearLayout>

    <ba.unsa.etf.digit_recognizer_app.CanvasView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="120dp"
        android:textAlignment="center"
        android:text="@string/you_draw_and_we_will_try_to_guess"
        android:textSize="20sp" />
</LinearLayout>